testing mobile overflow issue

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -90,7 +90,7 @@
     #grey-illustration {
         position: absolute;
         height:30%;
-        right:-40px;
+        right:0px;
         top:-20%;
     }
     #ellipse {
